Add single elimination winner reassignment page and automatic KO round names
