# backend/bracket/routes/stage_items.py
@@ -94,7 +94,7 @@ async def create_stage_item(
     check_requirement(existing_stage_items, user, "max_stage_items")
 
     stage_item = await sql_create_stage_item_with_empty_inputs(tournament_id, stage_body)
-    await build_matches_for_stage_item(stage_item, tournament_id)
+    await build_matches_for_stage_item(stage_item, tournament_id, stage_body.round_names)
     return SuccessResponse()
 
 
